# clawpet

./: .gitignore  .vercelignore  CHANGELOG.md  README.md  index.html  onboard.html  overlay.html  package-lock.json  package.json  vite.config.ts
docs/: avatar-animation-plan.md  avatar-bundle-spec.md  avatar-event-contract.md  clawpals-style-guide.md  clawpet-style-guide.md  design-principles.md  onboarding-wizard.md  openclaw-expression-system.md  product-brief.md  reactivity-architecture.md  release-smoke-test.md  requirements.md  roadmap.md  runtime-first-mvp-plan.md  tasks-next.md  ux-spec.md  v0.3.0-expression-priority.md  v0.3.0-implementation-checklist.md  v0.3.0-log-copy.md  v0.5-brief.md  v0.6.0-avatar-pipeline-release-notes.md  windows-signing.md
jobs/: ember-pebble-gpt-edited-frames.sample.json  ember-pebble-gpt-image-2.sample.json  ember-pebble-reference-edit.sample.json  glow-sprout-gpt-image-2.sample.json  lantern-moth-wizard-gpt-image-2-expressive.sample.json  lantern-moth-wizard-gpt-image-2.sample.json  mooncap-sprite-gpt-edited-frames.sample.json  pocket-golem-local.sample.json  pocket-golem-mock-repair.sample.json  pocket-golem-mock.sample.json  pocket-golem-sheet.sample.json  rig-safe-orange-cat-gpt-image-2.sample.json
scripts/: animate_avatar_frames.py  build_avatar_bundle.py  despill_existing_avatars.py  install-unix.sh  install-windows.ps1  run-runtime.mjs  run_avatar_pipeline.py  slice_avatar_sheet.py
src/: landing.css  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  runtime_http.rs
(+54 files in other folders)
