[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
hostname = "0.4"
log = "0.4"
time = { version = "0.3", features = ["formatting"] }
tauri = { version = "2.11.1", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
